apps/base/utils/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n

  template:
    metadata:
      labels:
        app: n8n
        try: "0"
        policy-type: "app"

    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 192.168.50.20
        - 1.1.1.1

      containers:
      - name: n8n
        image: docker.n8n.io/n8nio/n8n:2.43.0

        securityContext:
          allowPrivilegeEscalation: false

        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "1000m"

        ports:
        - containerPort: 3008
          protocol: TCP

        volumeMounts:
        - mountPath: /home/node/.n8n
          name: n8n-data

      restartPolicy: Always

      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data-nfs
