apps/base/utils/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  selector:
    app: n8n
  ports:
    - port: 3008
      targetPort: 3008
  type: NodePort
